--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bootstrap": "^5.1.3",
     "react": "^18.1.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
