--- a/app/package.json
+++ b/app/package.json
@@ -10,7 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "bootstrap": "^5.1.3",
+    "framer-motion": "^11.2.6",
     "react": "^18.1.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.4.0",
