--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --config webpack.config.js"
+    "start": "webpack serve --config webpack.config.js",
+    "start-watch": "WATCHPACK_POLLING=true webpack serve --config webpack.config.js"
   },
   "keywords": [],
   "author": "",
