--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: kanban.exercise.com
-    command: yarn run start
+    command: yarn start-watch
     volumes:
       - node_modules:/app/node_modules
       - ./app:/app
